package jobs4u.base.jobRequirementSpecification.repositories;


import eapli.framework.domain.repositories.DomainRepository;
import jobs4u.base.jobRequirementSpecification.domain.JobRequirementSpecification;

public interface JobRequirementSpecificationRepository extends DomainRepository<Long, JobRequirementSpecification> {
}
