@startuml
'https://plantuml.com/class-diagram

class SelectJobRequirementSpecificationForJobOpeningUI <<presentation>>
class SelectJobRequirementSpecificationForJobOpeningController <<application>>
class PersistenceContext
interface RepositoryFactory
interface JobOpeningRepository <<repository>>
interface JobRequirementSpecificationRepository <<repository>>
class InMemoryJobOpeningRepository <<persistence>>
class JpaJobOpeningRepository <<persistence>>
class InMemoryJobRequirementSpecificationRepository <<persistence>>
class JpaJobRequirementSpecificationRepository <<persistence>>
class JobOpening <<domain>>
class JobRequirementSpecification <<domain>>

SelectJobRequirementSpecificationForJobOpeningUI -> SelectJobRequirementSpecificationForJobOpeningController
SelectJobRequirementSpecificationForJobOpeningController -> PersistenceContext
PersistenceContext --> RepositoryFactory
SelectJobRequirementSpecificationForJobOpeningController ..> JobOpeningRepository
SelectJobRequirementSpecificationForJobOpeningController ..> JobRequirementSpecificationRepository
RepositoryFactory --> JobOpeningRepository
RepositoryFactory --> JobRequirementSpecificationRepository
SelectJobRequirementSpecificationForJobOpeningController ..> JobOpening
JobOpeningRepository --> JobOpening
JobRequirementSpecificationRepository --> JobRequirementSpecification
JpaJobOpeningRepository --|> JobOpeningRepository
InMemoryJobOpeningRepository --|> JobOpeningRepository
InMemoryJobRequirementSpecificationRepository --|> JobRequirementSpecificationRepository
JpaJobRequirementSpecificationRepository --|> JobRequirementSpecificationRepository
JobOpening --> JobRequirementSpecification

@enduml